--- a/src/components/Skills.css
+++ b/src/components/Skills.css
@@ -19,7 +19,7 @@
 }
 
 .skill-desc {
-  font-size: 1rem;
+  font-size: 1.2rem;
   line-height: 1.5;
   color: #ccc;
   text-align: center;
@@ -82,11 +82,15 @@
   white-space: nowrap;
   text-align: center;
   display: flex;
-  font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+  /* font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif; */
   flex-direction: column;
   align-items: center;
   box-shadow: 0 4px 12px rgba(0, 0, 0, 0.3);
   gap: 0.75rem;
+}
+
+.skill-card:hover {
+  box-shadow: 0 0 12px #db5e1c, 0 0 24px #db5e1c inset;
 }
 
 .skill-icon {
